# OS_labs

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
lab1/: CMakeLists.txt  main.cpp  test.txt
lab1/include/: lab1.h
lab1/src/: divergent.cpp  lab1.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: lab2.h
lab2/src/: lab2.cpp
tests/: CMakeLists.txt  test_lab1.cpp  test_lab2.cpp
